--- a/leads/templates/leads/lead_update.html
+++ b/leads/templates/leads/lead_update.html
@@ -117,6 +117,45 @@
                         </div>
                     </div>
 
+                    <hr>
+                    <h5 class="text-primary mb-3">Vehicle Information (Optional)</h5>
+
+                    <div class="row">
+                        <div class="col-md-4 mb-3">
+                            <label for="{{ form.vehicle_year.id_for_label }}" class="form-label">
+                                {{ form.vehicle_year.label }}
+                            </label>
+                            {{ form.vehicle_year }}
+                            {% if form.vehicle_year.errors %}
+                                <div class="text-danger small">
+                                    {{ form.vehicle_year.errors }}
+                                </div>
+                            {% endif %}
+                        </div>
+                        <div class="col-md-4 mb-3">
+                            <label for="{{ form.vehicle_make.id_for_label }}" class="form-label">
+                                {{ form.vehicle_make.label }}
+                            </label>
+                            {{ form.vehicle_make }}
+                            {% if form.vehicle_make.errors %}
+                                <div class="text-danger small">
+                                    {{ form.vehicle_make.errors }}
+                                </div>
+                            {% endif %}
+                        </div>
+                        <div class="col-md-4 mb-3">
+                            <label for="{{ form.vehicle_model.id_for_label }}" class="form-label">
+                                {{ form.vehicle_model.label }}
+                            </label>
+                            {{ form.vehicle_model }}
+                            {% if form.vehicle_model.errors %}
+                                <div class="text-danger small">
+                                    {{ form.vehicle_model.errors }}
+                                </div>
+                            {% endif %}
+                        </div>
+                    </div>
+
                     <div class="d-flex justify-content-between">
                         <div>
                             <a href="{% url 'lead_detail' lead.pk %}" class="btn btn-secondary">
