--- a/leads/templates/leads/lead_detail.html
+++ b/leads/templates/leads/lead_detail.html
@@ -59,7 +59,7 @@
                             </tr>
                             <tr>
                                 <td><strong>State:</strong></td>
-                                <td>{{ lead.get_state_display }}</td>
+                                <td>{{ lead.state }}</td>
                             </tr>
                             <tr>
                                 <td><strong>ZIP Code:</strong></td>
@@ -70,7 +70,7 @@
                                 <td>
                                     <address class="mb-0">
                                         {{ lead.address }}<br>
-                                        {{ lead.city }}, {{ lead.get_state_display }} {{ lead.zip_code }}
+                                        {{ lead.city }}, {{ lead.state }} {{ lead.zip_code }}
                                     </address>
                                 </td>
                             </tr>
@@ -81,47 +81,78 @@
                 <hr>
 
                 <div class="row">
-                    <div class="col-md-12">
-                        <h5 class="text-primary">Vehicle Information</h5>
+                    <div class="col-md-6">
+                        <h5 class="text-primary">Driving History</h5>
                         <table class="table table-borderless">
-                            {% if lead.vehicle_year or lead.vehicle_make or lead.vehicle_model %}
-                                <tr>
-                                    <td><strong>Vehicle:</strong></td>
-                                    <td>
-                                        {% if lead.vehicle_year %}{{ lead.vehicle_year }} {% endif %}
-                                        {% if lead.vehicle_make %}{{ lead.vehicle_make }} {% endif %}
-                                        {% if lead.vehicle_model %}{{ lead.vehicle_model }}{% endif %}
-                                        {% if not lead.vehicle_year and not lead.vehicle_make and not lead.vehicle_model %}
-                                            <span class="text-muted">Not provided</span>
-                                        {% endif %}
-                                    </td>
-                                </tr>
-                                {% if lead.vehicle_year %}
-                                <tr>
-                                    <td><strong>Year:</strong></td>
-                                    <td>{{ lead.vehicle_year }}</td>
-                                </tr>
-                                {% endif %}
-                                {% if lead.vehicle_make %}
-                                <tr>
-                                    <td><strong>Make:</strong></td>
-                                    <td>{{ lead.vehicle_make }}</td>
-                                </tr>
-                                {% endif %}
-                                {% if lead.vehicle_model %}
-                                <tr>
-                                    <td><strong>Model:</strong></td>
-                                    <td>{{ lead.vehicle_model }}</td>
-                                </tr>
-                                {% endif %}
-                            {% else %}
-                                <tr>
-                                    <td colspan="2">
-                                        <span class="text-muted">No vehicle information provided</span>
-                                    </td>
-                                </tr>
-                            {% endif %}
+                            <tr>
+                                <td><strong>Tickets (Past Year):</strong></td>
+                                <td>{{ lead.tickets_past_year }}</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Accidents (Past Year):</strong></td>
+                                <td>{{ lead.accidents_past_year }}</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Homeowner:</strong></td>
+                                <td>
+                                    {% if lead.is_homeowner %}
+                                        <span class="badge bg-success">Yes</span>
+                                    {% else %}
+                                        <span class="badge bg-secondary">No</span>
+                                    {% endif %}
+                                </td>
+                            </tr>
                         </table>
+                    </div>
+                    <div class="col-md-6">
+                        <h5 class="text-primary">Vehicle Information</h5>
+                        {% if lead.vehicles.exists %}
+                            {% for vehicle in lead.vehicles.all %}
+                                <div class="card mb-3">
+                                    <div class="card-body">
+                                        <h6 class="card-title">
+                                            <i class="fas fa-car"></i> Vehicle {{ forloop.counter }}
+                                            <div class="btn-group btn-group-sm float-end" role="group">
+                                                <a href="{% url 'vehicle_update' vehicle.pk %}" class="btn btn-outline-warning btn-sm">
+                                                    <i class="fas fa-edit"></i>
+                                                </a>
+                                                <a href="{% url 'vehicle_delete' vehicle.pk %}" class="btn btn-outline-danger btn-sm">
+                                                    <i class="fas fa-trash"></i>
+                                                </a>
+                                            </div>
+                                        </h6>
+                                        <table class="table table-sm table-borderless">
+                                            <tr>
+                                                <td><strong>Year:</strong></td>
+                                                <td>{{ vehicle.year }}</td>
+                                            </tr>
+                                            <tr>
+                                                <td><strong>Make:</strong></td>
+                                                <td>{{ vehicle.make }}</td>
+                                            </tr>
+                                            <tr>
+                                                <td><strong>Model:</strong></td>
+                                                <td>{{ vehicle.model }}</td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                            <div class="mt-3">
+                                <a href="{% url 'vehicle_create' lead.pk %}" class="btn btn-success btn-sm">
+                                    <i class="fas fa-plus"></i> Add Another Vehicle
+                                </a>
+                            </div>
+                        {% else %}
+                            <div class="card">
+                                <div class="card-body text-center">
+                                    <p class="text-muted mb-3">No vehicles added yet</p>
+                                    <a href="{% url 'vehicle_create' lead.pk %}" class="btn btn-success">
+                                        <i class="fas fa-plus"></i> Add Vehicle
+                                    </a>
+                                </div>
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
 
