--- a/leads/templates/leads/lead_list.html
+++ b/leads/templates/leads/lead_list.html
@@ -45,7 +45,7 @@
                                     </td>
                                     <td>
                                         <i class="fas fa-map-marker-alt text-muted"></i>
-                                        {{ lead.city }}, {{ lead.get_state_display }} {{ lead.zip_code }}
+                                        {{ lead.city }}, {{ lead.state }} {{ lead.zip_code }}
                                     </td>
                                     <td>{{ lead.birth_date|date:"M d, Y" }}</td>
                                     <td>
