feat: Add Lead tracking to Meta Pixel Code on thank you page

--- a/leads/templates/leads/thank_you.html
+++ b/leads/templates/leads/thank_you.html
@@ -146,6 +146,12 @@
     'https://connect.facebook.net/en_US/fbevents.js');
     fbq('init', '1131041245579941');
     fbq('track', 'PageView');
+    fbq('track', 'Lead', {
+        content_name: 'Auto Insurance Quote Request',
+        content_category: 'insurance',
+        value: 1,
+        currency: 'USD'
+    });
     </script>
     <noscript><img height="1" width="1" style="display:none"
     src="https://www.facebook.com/tr?id=1131041245579941&ev=PageView&noscript=1"
