--- a/leads/templates/leads/thank_you.html
+++ b/leads/templates/leads/thank_you.html
@@ -161,7 +161,7 @@
 <body>
     <div class="thank-you-container">
         <!-- Logo -->
-        <img src="/static/logo.png" alt="SaveDriveNow" class="logo">
+        <img src="/static/logo.png" alt="SaveDriveNow" class="img-fluid mx-auto d-block" style="max-width:450px;">
         
         <!-- Success Icon -->
         <div class="thank-you-icon">
