--- a/leads/templates/leads/thank_you.html
+++ b/leads/templates/leads/thank_you.html
@@ -160,9 +160,10 @@
 </head>
 <body>
     <div class="thank-you-container">
-        <!-- Logo -->
-        <img src="/static/logo.png" alt="SaveDriveNow" class="img-fluid mx-auto d-block" style="max-width:450px;">
-        
+        <!-- Logo image centered and mobile-friendly -->
+        <img src="/static/logo.png" alt="SaveDriveNow" class="img-fluid mx-auto d-block"
+                style="max-width:450px; width:100%; height:auto;">
+                
         <!-- Success Icon -->
         <div class="thank-you-icon">
             <i class="fas fa-check-circle"></i>
